--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 
     <div class="row">
         <div class="col-sm-8">
-            <table class="table table-hover table-striped" data-toggle="table" data-url="http://localhost:5000/get_pricing" data-sort-name="location" data-sort-order="asc">
+            <table class="table table-hover table-striped" data-pagination="true" data-search="true" data-toggle="table" data-url="http://localhost:5000/get_pricing" data-sort-name="location" data-sort-order="asc">
                 <thead>
                     <tr>
                         <th data-field="location" data-sortable="true">Location</th>
