--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,19 @@
 <div class="container">
 
     <div class="row">
-        <div class="col-sm-8">
+            <div class="col-md-8 col-md-offset-2">
+            <h1>hi</h1>
+            <span>sup? That's about it for now. It's not even wannabe level yet!</span>
+            <h2>TODO</h2>
+            <span>Stuff. Lot's of stuff.</span>
+            <h2>Examples</h2>
+            <ul>
+                    <li><a href="/get_pricing">/get_pricing</a></li>
+                    <li><a href="/get_pricing/us-east-1">/get_pricing/region</a></li>
+                    <li><a href="/get_pricing/us-east-1/r4.large">/get_pricing/region/instanceType</a></li>
+            </ul>
+
+            <h2>Search and sortable table</h2>
             <table class="table table-hover table-striped" data-pagination="true" data-search="true" data-toggle="table" data-url="https://lit-tor-94184.herokuapp.com/get_pricing" data-sort-name="location" data-sort-order="asc">
                 <thead>
                     <tr>
