hey, what's that over there?!

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,13 +19,13 @@
             <span>Stuff. Lot's of stuff.</span>
             <h2>Examples</h2>
             <ul>
-                    <li><a href="/get_pricing">/get_pricing</a></li>
-                    <li><a href="/get_pricing/us-east-1">/get_pricing/region</a></li>
-                    <li><a href="/get_pricing/us-east-1/r4.large">/get_pricing/region/instanceType</a></li>
+                    <li><a href="/v1/get_pricing">/get_pricing</a></li>
+                    <li><a href="/v1/get_pricing/us-east-1">/get_pricing/region</a></li>
+                    <li><a href="/v1/get_pricing/us-east-1/r4.large">/get_pricing/region/instanceType</a></li>
             </ul>
 
             <h2>Search and sortable table</h2>
-            <table class="table table-hover table-striped" data-pagination="true" data-search="true" data-toggle="table" data-url="https://lit-tor-94184.herokuapp.com/get_pricing" data-sort-name="location" data-sort-order="asc">
+            <table class="table table-hover table-striped" data-pagination="true" data-search="true" data-toggle="table" data-url="http://localhost:5000/v1/get_pricing" data-sort-name="location" data-sort-order="asc">
                 <thead>
                     <tr>
                         <th data-field="location" data-sortable="true">Location</th>
