--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
                 </ul>
             </div>
 
-            <table class="table table-hover table-striped" data-pagination="true" data-search="true" data-toggle="table" data-url="http://localhost:5000/v1/get_pricing" data-sort-name="location" data-sort-order="asc">
+            <table class="table table-hover table-striped" data-pagination="true" data-search="true" data-toggle="table" data-url="{{ request.url }}v1/get_pricing" data-sort-name="location" data-sort-order="asc">
                 <thead>
                     <tr>
                         <th data-field="location" data-sortable="true">Location</th>
